# checkmate

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  configuration.yaml
.github/workflows/: docker.yml  publish.yml  rust.yml
.sqlx/: query-2602721249a6185461be1279e02a8b2f224f603503222942cbf0d3cf887d1256.json  query-2ac437ead73e3dc928bef7dd2170f19d496e114188b05be6d1d206ca9bb73091.json  query-5d89d1421daaaf973cd135baf6ced9437c203fce3a99ac227e3b9474b50f24c4.json  query-8e0f92970c6c0daaa6fee30ba2842b58687465590a3db975cd6b973298188ba4.json  query-907cc5daed1d09fadc83c65b93f1a2d82c722f831eba3e79b416f4610f85a320.json  query-b618595f1d8d7c22b7de41b070a5e6d116d4380d622145f15c64be13d880f4b1.json
docker/: docker-compose.yml  main.dockerfile
docs/: api.swagger.yaml
migrations/: 20230730174017_create_users_table.sql  20230807191309_create_sessions_table.sql
src/webapi/: Cargo.toml
src/webapi/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/webapi/src/controller/: user_repository.rs
src/webapi/src/extractors/: mod.rs  user_claim.rs
src/webapi/src/models/: mod.rs  session_token.rs  user.rs
src/webapi/src/routes/: infra.rs  mod.rs  user.rs
src/webapi/tests/: common.rs  infra.rs  integ.rs  user.rs
src/webui/: index.html
