[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1" 
tracing-actix-web = "0.7"
uuid = { version = "1.4.1", features = ["v4"] }
