[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "webapi"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-actix-web = "0.7"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18.0"
