[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "webapi"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-actix-web = "0.7"
uuid = { version = "1.4.1", features = ["v4"] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "postgres",
    "macros",
    "migrate",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
serde = "1.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
thiserror = "1.0.44"
serde_json = "1.0.104"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18.0"
